# Cortex-IDE

./: .gitmodules  README.md
Backend/: package-lock.json  package.json  server.js  test-gemini.js
Backend/memori_engine/: main.py
Backend/memori_engine/Memori/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml  setup.py
Backend/memori_engine/Memori/benchmarks/: .env.example  01_load_indexes.ipynb  02_run_benchmark.ipynb  README.md
Backend/memori_engine/Memori/core/: .gitignore  Makefile  README.md
Backend/memori_engine/Memori/core/bindings/python/: Cargo.toml
Backend/memori_engine/Memori/core/bindings/python/src/: lib.rs
Backend/memori_engine/Memori/examples/digitalocean/: .env.example  README.md  main.py  pyproject.toml
Backend/memori_engine/Memori/memori/: __init__.py  __main__.py  _config.py  _embedding_input.py  _exceptions.py  _network.py  _rust_core.py  _setup.py  _utils.py  agent.py
Backend/memori_engine/Memori/memori-ts/: README.md  package-lock.json  package.json
Backend/memori_engine/Memori/tests/: test_agent.py  test_cli.py  test_init.py  test_legacy_package_warning.py  test_litellm_client.py  test_llm_auto_registration.py  test_network.py  test_rust_core.py  test_search.py  test_typing_dx.py
Frontend/frontend/: README.md  index.html  metadata.json  package-lock.json  package.json
Frontend/frontend/src/: App.jsx  index.css  main.jsx
Frontend/frontend/src/components/: ArchitectureCanvas.jsx  DecisionMemory.jsx  (+8 more)
(+353 files in other folders)
